[package]
name = "testresult"
version = "0.4.1"
edition = "2021"
authors = ["Wiktor Kwapisiewicz <wiktor@metacode.biz>"]
description = "Provides TestResult type for concise and precise test failures"
repository = "https://github.com/wiktor-k/testresult"
license = "MIT OR Apache-2.0"
keywords = ["testing", "error", "error-handling"]
categories = ["development-tools::testing", "rust-patterns"]
exclude = [".github"]

[dependencies]

[dev-dependencies]
anyhow = "1.0.86"
rstest = "0.21.0"
